<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Main Menu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_loginfo"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_loginfo" />
                <item
                    android:id="@+id/nav_logcalang"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_logcalang" />
                <item
                    android:id="@+id/nav_changepassword"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_changepassword" />
            </group>
        </menu>
    </item>

    <item android:title="Log Out">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
