<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mediumsitompul.maps_query_odp_onsite.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_loginfo"
        android:name="com.mediumsitompul.maps_query_odp_onsite.ui.log.LogFragment"
        android:label="@string/menu_loginfo"
        tools:layout="@layout/fragment_loginfo" />

    <fragment
        android:id="@+id/nav_logcalang"
        android:name="com.mediumsitompul.maps_query_odp_onsite.ui.logcalang.LogcalangFragment"
        android:label="@string/menu_logcalang"
        tools:layout="@layout/fragment_logcalang" />

    <fragment
        android:id="@+id/nav_changepassword"
        android:name="com.mediumsitompul.maps_query_odp_onsite.ui.changepassword.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />
</navigation>